--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 
 
 	<dependencies>
+		<dependency>
+	        <groupId>xerces</groupId>
+	        <artifactId>xercesImpl</artifactId>
+	        <version>2.11.0</version>
+		</dependency>
 	
 		<!-- https://mvnrepository.com/artifact/junit-addons/junit-addons -->
 		<dependency>
